--- a/client/views/content.html
+++ b/client/views/content.html
@@ -1,6 +1,12 @@
 <template name="content">
 	<div class="container">
 		<div class="row">
+			<div class="col-xs-12">
+				{{#each wishlist}}
+					<div>{{name}}</div>
+					<a>Click me</a>
+				{{/each}}
+			</div>
 		</div>
 	</div>
 </template>
