--- a/client/views/content.html
+++ b/client/views/content.html
@@ -2,10 +2,26 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-xs-12">
-				{{#each wishlist}}
-					<div>{{name}}</div>
-					<a>Click me</a>
-				{{/each}}
+                <table class="table table-striped table-hover">
+                    <thead>
+                        <tr>
+                            <th>ID</th>
+                            <th>Item Name</th>
+                            <th>Item URL</th>
+                            <th>Remove Item</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {{#each wishlist}}
+                            <tr>
+                                <td>{{_id}}</td>
+                                <td>{{name}}</td>
+                                <td><a href="{{url}}" target="_blank">View</a></td>
+                                <td><a class="remove">Remove</a></td>
+                            </tr>
+                        {{/each}}
+                    </tbody>
+                </table>
 			</div>
 		</div>
 	</div>
