Added product route

--- a/client/views/home.html
+++ b/client/views/home.html
@@ -4,6 +4,7 @@
 			Home
 			<a href="{{pathFor 'listItems'}}">listItems</a>
 			<a href="{{pathFor 'addItem'}}">addItem</a>
+			<a href="{{pathFor 'products'}}">PRODUCTS!~!!!~~~!!!1</a>
 		</div>
 	</div>
 </template>
