--- a/client/views/product.scss
+++ b/client/views/product.scss
@@ -1,4 +1,5 @@
 .productCard {
+  float: left;
   max-width: 300px;
   margin: 1em auto;
   border: 10px solid #000;
@@ -28,11 +29,9 @@
       }
     }
   }
-  .productCard_img-wrapper {
-    margin: 2em;
-  }
   .productCard_img {
     max-width: 100%;
+    width:100%;
   }
   .productCard_title {
     background: #699AB8;
