updated products template

--- a/client/views/products.html
+++ b/client/views/products.html
@@ -2,7 +2,7 @@
 	{{#each products}}
 		<div class="row">
 		{{#each this}}
-			<div class="col-xs-4">
+			<div class="col-sm-4">
 			{{> product}}
 			</div>
 		{{/each}}
