fixed some find issues with Templates

--- a/client/views/navbar.html
+++ b/client/views/navbar.html
@@ -12,7 +12,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="{{pathFor 'listItems'}}">Items</a></li>
+                    <li class="active"><a href="{{pathFor 'listItems'}}">Items</a></li>
                     <li><a href="{{pathFor 'addItem'}}">Add Item</a></li>
                 </ul>
             </div><!--/.nav-collapse -->
