--- a/client/views/navbar.html
+++ b/client/views/navbar.html
@@ -15,6 +15,9 @@
                     <li class="active"><a href="{{pathFor 'listItems'}}">Items</a></li>
                     <li><a href="{{pathFor 'addItem'}}">Add Item</a></li>
                 </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    {{> loginButtons}} <!-- here -->
+                </ul>
             </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
     </div><!--/.navbar -->
