--- a/client/views/navbar.html
+++ b/client/views/navbar.html
@@ -1,6 +1,6 @@
 <template name="navbar">
     <div class="navbar navbar-default" role="navigation">
-        <div class="container-fluid">
+        <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="sr-only">Toggle navigation</span>
@@ -8,10 +8,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Wish Wizard</a>
+                <a class="navbar-brand" href="{{pathFor 'products'}}">Wish Wizard</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
+                    <li><a href="{{pathFor 'products'}}">Products</a></li>
                     <li><a href="{{pathFor 'listItems'}}">Items</a></li>
                     <li><a href="{{pathFor 'addItem'}}">Add Item</a></li>
                 </ul>
