--- a/client/views/addItem.html
+++ b/client/views/addItem.html
@@ -23,6 +23,7 @@
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
                         <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-plus"></span> Add Item</button>
+                        <button id="test-amazon" class="btn"><span class="glyphicon glyphicon-plus"></span> Test Amazon</button>
                     </div>
                 </div>
             </form>
