Donate button is now on the home page

--- a/client/views/navbar.html
+++ b/client/views/navbar.html
@@ -15,6 +15,7 @@
                     <li class="active"><a href="{{pathFor 'listItems'}}">Items</a></li>
                     <li><a href="{{pathFor 'addItem'}}">Add Item</a></li>
                 </ul>
+                <a href="#" id="donateToggle">Donate</a>
                 <ul class="nav navbar-nav navbar-right">
                     {{> loginButtons}} <!-- here -->
                 </ul>
