--- a/client/views/product.html
+++ b/client/views/product.html
@@ -3,8 +3,8 @@
     	<div class="productCard_topHeader">
     		<h1 class="productCard_price">${{price}}</h1>
         <div class="cardAdds_interact">
-          <span class="fa fa-heart cardAdds_like">like</span>
-          <span class="fa fa-plus cardAdds_collect">add</span>
+          <span class="fa fa-heart cardAdds_like {{liked}}"></span>
+          <span class="fa fa-plus cardAdds_collect"></span>
         </div>
     	</div>
         <div class="productCard_img-wrapper">
