--- a/client/views/product.scss
+++ b/client/views/product.scss
@@ -21,9 +21,15 @@
         padding: 0.25em;
         font-size: 2em;
         color: #999;
-        &:hover {
+        &:hover{
           color: #000;
           cursor: pointer;
+        }
+        &.active{
+          color: #f00;
+          &:hover{
+            color: rgba(255,0,0,.6);
+          }
         }
       }
     }
