omg all the trash, clean EVERYTHING

--- a/client/views/footer.html
+++ b/client/views/footer.html
@@ -1,5 +1,5 @@
 <template name="footer">
     <div class="footer">
-        <p class="text-muted">Footer goes here</p>
+        <p class="text-muted text-center">Footer goes here</p>
     </div>
 </template>
