--- a/client/views/addItem.html
+++ b/client/views/addItem.html
@@ -1,32 +1,57 @@
 <template name="addItem">
-    <div class="container">
-        <div class="row">
-            <form class="form-horizontal" role="form">
-                <div class="form-group">
-                    <label for="itemName" class="col-sm-2 control-label">Item Name</label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" id="itemName" placeholder="Name of the item">
-                    </div>
+    <div id="modal_addToCollection" class="modal fade">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header"></div>
+          <div class="modal-body">
+            <h1>Add To Collection</h1>
+            <div class="collectionList">
+                <div class="collection clearfix">
+                <div class="slideBox">  
+                  <input type="checkbox" value="None" id="slideThree" name="check" checked />
+                  <label for="slideThree"></label>
                 </div>
-                <div class="form-group">
-                    <label for="itemDesc" class="col-sm-2 control-label">Item Description</label>
-                    <div class="col-sm-10">
-                        <textarea class="form-control" id="itemDesc" placeholder="Item Description"></textarea>
-                    </div>
+                <span>Board Games and Comic Books</span>
+                <div class="thumb thumb-0"></div>
+                <div class="thumb thumb-1"></div>
+                <div class="thumb thumb-2"></div>
+                <div class="thumb thumb-3"></div>
+              </div>
+              <div class="collection clearfix">
+                <div class="slideBox">  
+                  <input type="checkbox" value="None" id="slideThree" name="check" checked />
+                  <label for="slideThree"></label>
                 </div>
-                <div class="form-group">
-                    <label for="amazonUrl" class="col-sm-2 control-label">Amazon URL</label>
-                    <div class="col-sm-10">
-                        <textarea class="form-control" id="amazonUrl" placeholder="http://some-url.com"></textarea>
-                    </div>
+                <span>Board Games and Comic Books</span>
+                <div class="thumb thumb-0"></div>
+                <div class="thumb thumb-1"></div>
+                <div class="thumb thumb-2"></div>
+                <div class="thumb thumb-3"></div>
+              </div>
+              <div class="collection clearfix">
+                <div class="slideBox">  
+                  <input type="checkbox" value="None" id="slideThree" name="check" checked />
+                  <label for="slideThree"></label>
                 </div>
-                <div class="form-group">
-                    <div class="col-sm-offset-2 col-sm-10">
-                        <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-plus"></span> Add Item</button>
-                        <button id="test-amazon" class="btn"><span class="glyphicon glyphicon-plus"></span> Test Amazon</button>
-                    </div>
-                </div>
-            </form>
-        </div>
-    </div>
+                <span>Board Games and Comic Books</span>
+                <div class="thumb thumb-0"></div>
+                <div class="thumb thumb-1"></div>
+                <div class="thumb thumb-2"></div>
+                <div class="thumb thumb-3"></div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-xs-12">
+                <div class="input-group addNewCollection-wrapper">
+                  <input type="text" class="form-control" placeholder="Add a new collection">
+                  <span class="input-group-btn">
+                    <button class="btn btn-default" type="button">Add</button>
+                  </span>
+                </div><!-- /input-group -->
+              </div><!-- /.col-xs-12 -->
+            </div><!-- /.row -->
+          </div>
+        </div><!-- /.modal-content -->
+      </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
 </template>
