--- a/client/views/navbar.html
+++ b/client/views/navbar.html
@@ -11,15 +11,23 @@
                 <a class="navbar-brand" href="{{pathFor 'products'}}">Wish Wizard</a>
             </div>
             <div class="navbar-collapse collapse">
+                <!--
                 <ul class="nav navbar-nav">
                     <li class="default-active navbar-item active"><a href="{{pathFor 'products'}}">Products</a></li>
                     <li class="navbar-item"><a href="{{pathFor 'listItems'}}">Items</a></li>
                     <li class="navbar-item"><a href="{{pathFor 'addItem'}}">Add Item</a></li>
                 </ul>
+                -->
                 <button type="button" class="btn btn-primary navbar-btn" data-toggle="modal" data-target="#donate">Donate</button>
                 <ul class="nav navbar-nav navbar-right">
                     {{> loginButtons}} <!-- here -->
                 </ul>
+                <div id="amazon-url" class="navbar-form navbar-right">
+                  <div class="form-group">
+                    <input type="text" class="form-control" placeholder="Amazon Url">
+                  </div>
+                  <button class="btn btn-default">+</button>
+                </div>
             </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
     </div><!--/.navbar -->
