new modal system based on sessions

--- a/client/views/donate.html
+++ b/client/views/donate.html
@@ -1,5 +1,5 @@
 <template name="donate">
-    <div id="donate" class="modal fade">
+    <div id="donate-modal" class="modal fade">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
