--- a/client/views/navbar.html
+++ b/client/views/navbar.html
@@ -18,7 +18,7 @@
                     <li class="navbar-item"><a href="{{pathFor 'addItem'}}">Add Item</a></li>
                 </ul>
                 -->
-                <button type="button" class="btn btn-primary navbar-btn" data-toggle="modal" data-target="#donate">Donate</button>
+                <button id="donate" type="button" class="btn btn-primary navbar-btn">Donate</button>
                 <ul class="nav navbar-nav navbar-right">
                     {{> loginButtons}} <!-- here -->
                 </ul>
