added header styling

--- a/client/views/product.html
+++ b/client/views/product.html
@@ -7,9 +7,7 @@
           <span class="fa fa-plus cardAdds_collect"></span>
         </div>
     	</div>
-        <div class="productCard_img-wrapper">
-        	<img class="productCard_img" src="{{thumb}}" alt="" />
-        </div>
+        <div class="productCard_img" style="background-image:url({{thumb}})"></div>
         <div class="productCard_title">{{name}}</div>
         <div class="cardAdds_community">
         	<div class="cardAdds_members clearfix">
