--- a/client/views/footer.html
+++ b/client/views/footer.html
@@ -1,5 +1,5 @@
 <template name="footer">
-    <div class="footer">
-        <p class="text-muted text-center">Footer goes here</p>
-    </div>
+    <footer>
+        <div class="text-muted text-center">Copywright Forever!</div>
+    </footer>
 </template>
