--- a/client/views/footer.scss
+++ b/client/views/footer.scss
@@ -1,1 +1,9 @@
-
+footer{
+	padding: 70px 0 50px;
+	background: #606060;
+	background-image: url(rock-repeat.png);
+	background-position: top;
+	background-repeat: repeat-x;
+	margin-top: 30px;
+	color: #fff;
+}
