--- a/client/views/footer.scss
+++ b/client/views/footer.scss
@@ -1,7 +1,7 @@
 footer{
 	padding: 70px 0 50px;
 	background: #606060;
-	background-image: url(rock-repeat.png);
+	background-image: url(footer_rock-repeat.png);
 	background-position: top;
 	background-repeat: repeat-x;
 	margin-top: 30px;
