--- a/client/views/footer.html
+++ b/client/views/footer.html
@@ -1,5 +1,5 @@
 <template name="footer">
     <footer>
-        <div class="text-muted text-center">Copywright Forever!</div>
+        <div class="text-center">Copywright Forever!</div>
     </footer>
 </template>
