--- a/client/views/navbar.html
+++ b/client/views/navbar.html
@@ -8,23 +8,19 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="{{pathFor 'products'}}">{{#if currentUser}}<img src="nav_logo.png">{{/if}}</a>
+                <a class="navbar-brand" href="{{pathFor 'products'}}">Wish Wizard</a>
             </div>
             <div class="navbar-collapse collapse">
-                {{#if currentUser}}
                 <button id="donate" type="button" class="btn btn-primary navbar-btn">Donate</button>
-                {{/if}}
                 <ul class="nav navbar-nav navbar-right">
                     {{> loginButtons}} <!-- here -->
                 </ul>
-                {{#if currentUser}}
                 <div id="amazon-url" class="navbar-form navbar-right">
                   <div class="form-group">
                     <input type="text" class="form-control" placeholder="Amazon Url">
                   </div>
-                  <button class="btn btn-default">+</button>
+                  <button class="btn btn-default"><i class="glyphicon glyphicon-plus"></i></button>
                 </div>
-                {{/if}}
             </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
     </div><!--/.navbar -->
