--- a/client/views/navbar.scss
+++ b/client/views/navbar.scss
@@ -5,3 +5,11 @@
 		border: 1px solid #8FBAD5;
 	}
 }
+
+#amazon-url{
+	margin-right: 0;
+}
+
+.navbar-fixed-top{
+	background: rgba(255,255,255,.5);
+}
