changed line divider, trying to add code to add edit button to profile

--- a/client/views/navbar.html
+++ b/client/views/navbar.html
@@ -25,3 +25,7 @@
         </div><!--/.container-fluid -->
     </div><!--/.navbar -->
 </template>
+
+<template name="_loginButtonsAdditionalLoggedInDropdownActions">
+    <button class="btn btn-default btn-block" id="login-buttons-edit-profile">Edit profile</button>
+</template>
