--- a/client/views/header.scss
+++ b/client/views/header.scss
@@ -16,11 +16,16 @@ header{
 	color: #333;
 	text-align: center;
 	padding: 60px 0 25px;
-	border-bottom: 2px ridge #333;
 	margin-bottom: 25px;
 	margin-top: -19px;
 	z-index: 1;
 	position: relative;
+}
+
+.divider {
+  margin: 1em 0;
+  height: 5px;
+  background: url('https://s3-us-west-2.amazonaws.com/cbeas.img/wishwizard/divider.png') repeat-x;
 }
 
 #left-torch,
