changed line divider, trying to add code to add edit button to profile

--- a/client/views/header.scss
+++ b/client/views/header.scss
@@ -15,8 +15,7 @@ header{
 	font-size: 50px;
 	color: #333;
 	text-align: center;
-	padding: 60px 0 25px;
-	margin-bottom: 25px;
+	padding: 60px 0 0;
 	margin-top: -19px;
 	z-index: 1;
 	position: relative;
