--- a/client/views/product.html
+++ b/client/views/product.html
@@ -8,7 +8,7 @@
         </div>
     	</div>
         <div class="productCard_img" style="background-image:url({{thumb}})"></div>
-        <div class="productCard_title">{{name}}</div>
+        <div class="productCard_title"><a href="{{url}}" target="_blank">{{name}}</a></div>
         <div class="cardAdds_community">
         	<div class="cardAdds_members clearfix">
                 {{{likes}}}
