--- a/client/views/product.scss
+++ b/client/views/product.scss
@@ -49,6 +49,10 @@
     text-align: center;
     max-height: 2.4em;
     overflow: hidden;
+    a {
+      text-decoration: none;
+      color: #fff;
+    }
   }
   .cardAdds_members {
     padding: 0.5em 0.25em;
