--- a/client/views/noaccess.html
+++ b/client/views/noaccess.html
@@ -3,8 +3,12 @@
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-body text-center">
-            <img class="noacess-img" src="shallnotpass.gif">
-            <div>Thou Shall Not Pass... Lest You Identify Yourself. Please Log In.</div>
+            <img class="noaccess-img" src="shallnotpass.gif">
+            <div class="noaccess-text">
+                Thou Shall Not Pass...<br>
+                Lest You Identify Yourself.<br>
+                Please Log In.
+            </div>
           </div>
           <!--
           <div class="modal-footer">
